Add the alert group info API
