# api/v2/restapi/operations/alertmanager_api.go
@@ -35,6 +35,7 @@ import (
 
 	"github.com/prometheus/alertmanager/api/v2/restapi/operations/alert"
 	"github.com/prometheus/alertmanager/api/v2/restapi/operations/alertgroup"
+	"github.com/prometheus/alertmanager/api/v2/restapi/operations/alertgroupinfolist"
 	"github.com/prometheus/alertmanager/api/v2/restapi/operations/general"
 	"github.com/prometheus/alertmanager/api/v2/restapi/operations/receiver"
 	"github.com/prometheus/alertmanager/api/v2/restapi/operations/silence"
@@ -67,7 +68,9 @@ func NewAlertmanagerAPI(spec *loads.Document) *AlertmanagerAPI {
 
 			return middleware.NotImplemented("operation silence.DeleteSilence has not yet been implemented")
 		}),
-
+		AlertgroupinfolistGetAlertGroupInfoListHandler: alertgroupinfolist.GetAlertGroupInfoListHandlerFunc(func(params alertgroupinfolist.GetAlertGroupInfoListParams) middleware.Responder {
+			return middleware.NotImplemented("operation alertgroupinfolist.GetAlertGroupInfoList has not yet been implemented")
+		}),
 		AlertgroupGetAlertGroupsHandler: alertgroup.GetAlertGroupsHandlerFunc(func(params alertgroup.GetAlertGroupsParams) middleware.Responder {
 			_ = params
 
@@ -153,6 +156,8 @@ type AlertmanagerAPI struct {
 
 	// SilenceDeleteSilenceHandler sets the operation handler for the delete silence operation
 	SilenceDeleteSilenceHandler silence.DeleteSilenceHandler
+	// AlertgroupinfolistGetAlertGroupInfoListHandler sets the operation handler for the get alert group info list operation
+	AlertgroupinfolistGetAlertGroupInfoListHandler alertgroupinfolist.GetAlertGroupInfoListHandler
 	// AlertgroupGetAlertGroupsHandler sets the operation handler for the get alert groups operation
 	AlertgroupGetAlertGroupsHandler alertgroup.GetAlertGroupsHandler
 	// AlertGetAlertsHandler sets the operation handler for the get alerts operation
@@ -248,6 +253,9 @@ func (o *AlertmanagerAPI) Validate() error {
 
 	if o.SilenceDeleteSilenceHandler == nil {
 		unregistered = append(unregistered, "silence.DeleteSilenceHandler")
+	}
+	if o.AlertgroupinfolistGetAlertGroupInfoListHandler == nil {
+		unregistered = append(unregistered, "alertgroupinfolist.GetAlertGroupInfoListHandler")
 	}
 	if o.AlertgroupGetAlertGroupsHandler == nil {
 		unregistered = append(unregistered, "alertgroup.GetAlertGroupsHandler")
@@ -367,6 +375,10 @@ func (o *AlertmanagerAPI) initHandlerCache() {
 		o.handlers["DELETE"] = make(map[string]http.Handler)
 	}
 	o.handlers["DELETE"]["/silence/{silenceID}"] = silence.NewDeleteSilence(o.context, o.SilenceDeleteSilenceHandler)
+	if o.handlers["GET"] == nil {
+		o.handlers["GET"] = make(map[string]http.Handler)
+	}
+	o.handlers["GET"]["/alertgroups"] = alertgroupinfolist.NewGetAlertGroupInfoList(o.context, o.AlertgroupinfolistGetAlertGroupInfoListHandler)
 	if o.handlers["GET"] == nil {
 		o.handlers["GET"] = make(map[string]http.Handler)
 	}
